--- a/yolov8_ros/yolov8_msgs/CMakeLists.txt
+++ b/yolov8_ros/yolov8_msgs/CMakeLists.txt
@@ -26,6 +26,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Detection.msg"
   "msg/DetectionArray.msg"
   "msg/DetectionInfo.msg"
+  "msg/FaceBox.msg"
+  "msg/FaceBoxArray.msg"
   DEPENDENCIES std_msgs geometry_msgs
 )
 ament_export_dependencies(rosidl_default_runtime)
