--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ adaface/adaface/script/pretrained/
 adaface/adaface/script/face_alignment/__pycache__/
 adaface/adaface/script/__pycache__/
 adaface/adaface/script/face_alignment/mtcnn_pytorch/src/__pycache__/
+adaface/adaface/script/face_alignment/mtcnn_pytorch/src/align_trans.py
