--- a/adaface/package.xml
+++ b/adaface/package.xml
@@ -3,17 +3,9 @@
 <package format="3">
   <name>adaface</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package for face recognition</description>
   <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
-  <license>TODO: License declaration</license>
-
-  <!-- <depend>numpy</depend>
-  <depend>cv2</depend>
-  <depend>sys</depend>
-  <depend>argparse</depend>
-  <depend>torch</depend>
-  <depend>net</depend>
-  <depend>os</depend> -->
+  <license>Apache-2</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -21,7 +13,7 @@
   <test_depend>python3-pytest</test_depend>
 
   <depend>rclpy</depend>
-  <depend>yolov8_msgs</depend>
+  <depend>moiro_interfaces</depend>
   <depend>yolov8_ros</depend>
 
   <depend>sensor_msgs</depend>
