--- a/human_follower/package.xml
+++ b/human_follower/package.xml
@@ -8,7 +8,7 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>yolov8_msgs</depend>
+  <depend>moiro_interfaces</depend>
   <depend>sensor_msgs</depend>
   
   <export>
