--- a/yolov8_ros/yolov8_ros/package.xml
+++ b/yolov8_ros/yolov8_ros/package.xml
@@ -15,6 +15,7 @@
   <depend>cv_bridge</depend>
   <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
+  <depend>moiro_interfaces</depend>
 
   <export>
     <build_type>ament_python</build_type>
