--- a/moiro_interfaces/CMakeLists.txt
+++ b/moiro_interfaces/CMakeLists.txt
@@ -31,6 +31,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/FaceBox2D.msg"
   "srv/Person.srv"
   "srv/TargetPose.srv"
+  "srv/TargetDepth.srv"
   DEPENDENCIES std_msgs geometry_msgs
 )
 ament_export_dependencies(rosidl_default_runtime)
