rename package's name

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-adaface/adaface/script/embed/
-adaface/adaface/script/video/
-adaface/adaface/script/pretrained/
+adaface_ros/adaface_ros/script/embed/
+adaface_ros/adaface_ros/script/video/
+adaface_ros/adaface_ros/script/pretrained/
 .vscode/
-adaface/adaface/script/face_alignment/__pycache__/
-adaface/adaface/script/__pycache__/
-adaface/adaface/script/face_alignment/mtcnn_pytorch/src/__pycache__/
-adaface/adaface/script/face_alignment/mtcnn_pytorch/src/align_trans.py
-adaface/adaface/script/face_dataset/test/mincheol.jpg
-adaface/adaface/script/face_dataset/test/minha.jpg
-adaface/adaface/script/face_dataset/test/yeonju.jpg
-adaface/adaface/script/face_dataset/test/woosung.jpg
-adaface/adaface/script/face_dataset/test/hyunwoo.jpg
+adaface_ros/adaface_ros/script/face_alignment/__pycache__/
+adaface_ros/adaface_ros/script/__pycache__/
+adaface_ros/adaface_ros/script/face_alignment/mtcnn_pytorch/src/__pycache__/
+adaface_ros/adaface_ros/script/face_alignment/mtcnn_pytorch/src/align_trans.py
+adaface_ros/adaface_ros/script/face_dataset/test/mincheol.jpg
+adaface_ros/adaface_ros/script/face_dataset/test/minha.jpg
+adaface_ros/adaface_ros/script/face_dataset/test/yeonju.jpg
+adaface_ros/adaface_ros/script/face_dataset/test/woosung.jpg
+adaface_ros/adaface_ros/script/face_dataset/test/hyunwoo.jpg
