--- a/adaface_ros/package.xml
+++ b/adaface_ros/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>adaface</name>
+  <name>adaface_ros</name>
   <version>0.0.0</version>
   <description>Package for face recognition</description>
   <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
